--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,6 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/store_api?createDatabaseIfNotExist=true
     username: root
-    password: MyPassword!
+    password: Rax@7692*#Rc
   jpa:
     show-sql: true
